# InferAGNI

./: .gitignore  README.md  pyproject.toml  readme.txt
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: tests.yaml
notebooks/: interpolate.ipynb  interpolate_data.ipynb  interpolate_demo.ipynb  paper_demo.ipynb  paper_demo1.ipynb  paper_grid.ipynb  paper_inst.ipynb  retrieve.ipynb  test.ipynb  test_interp.ipynb  test_retrieve.ipynb
notebooks/emcee_tutorial/: 01_quickstart.ipynb  02_fittingModel.ipynb  pool.ipynb
notebooks/interpolate_tutorial/: regular.ipynb  scattered.ipynb
notebooks/output/: _readme.txt
src/inferagni/: __init__.py  cli.py  const.py  data.py  grid.py  planets.py  plot.py  retrieve.py  util.py
src/inferagni/data/: _readme.txt  wolf2018_liquidus.csv  wolf2018_solidus.csv
tests/: test_grid.py  test_init.py  test_planets.py  test_retrieve.py  test_util.py
