[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "InferAGNI"
version = "26.02.12"
description = "Infer planet properties using AGNI as a static structure model"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name="Harrison Nicholls",    email="harrison.nicholls@ast.cam.ac.uk"},
]
keywords = [
    "Astronomy",
    "Exoplanets",
    "Model-coupling",
]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "cmcrameri",
    "matplotlib",
    "netCDF4",
    "numpy>=2.0.0",
    "pandas",
    "scipy",
    "pre-commit",
    "platformdirs",
    "ruff",
    "click",
]

[project.urls]
homepage = "https://www.h-nicholls.space/AGNI/"
issues = "https://github.com/nichollsh/InferAGNI/issues"
source = "https://github.com/nichollsh/InferAGNI/"
documentation = "https://www.h-nicholls.space/AGNI/"
changelog = "https://github.com/nichollsh/InferAGNI/releases"

[project.optional-dependencies]
develop = [
    "coverage[toml]",
    "tomlkit>=0.11.0",
    "pillow",
    "pip-tools",
    "pytest >= 8.1",
    "pytest-cov",
    "pytest-dependency",
    "pytest-timeout",
]

docs = [
    "markdown-include",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
inferagni = "inferagni.cli:cli"

[tool.setuptools]
package-dir = {"inferagni" = "src/inferagni"}
include-package-data = true

# [tool.setuptools.package-data]
# proteus = ["juliapkg.json"]

[tool.coverage.run]
branch = true
source = ["inferagni"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/conftest.py",
]

[tool.pytest.ini_options]
minversion = "8.1"
addopts = [
    # Global coverage options removed from addopts.
    # CI uses "coverage run -m pytest" with [tool.coverage.*] settings.
    # For local development, use either:
    #   1. "coverage run -m pytest" (matches CI behavior, compatible with coverage ratcheting)
    #   2. "pytest --cov" (uses pytest-cov, convenient but slightly different from CI)
    # Both approaches work; choose based on preference.
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--showlocals",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "smoke: marks tests as smoke tests (quick validation with real binaries, 1 timestep, low res)",
]

[tool.coverage.report]
# Coverage threshold - automatically updated by CI when coverage increases.
# See: tools/update_coverage_threshold.py and .github/workflows/ci_tests.yml.
# The ratcheting (only ever increasing or staying the same) is enforced in CI;
# do not manually decrease this value in pyproject.toml.
fail_under = 59
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.inferagni.coverage_fast]
# Fast CI (unit + smoke) coverage gate; ratcheted independently from full suite
# This lower bar is intended for mocked/fast tests only and will auto-increase
# when the fast suite gains coverage. Do not decrease manually.
fail_under = 44.45

[tool.ruff]
line-length = 96
target-version = "py312"
extend-exclude = ["*ipynb"]

[tool.ruff.lint]
select = [
	"F",  # Pyflakes
	"E",  # pycodestyle (error)
	"W",  # pycodestyle (warning)
    "I",    # isort
]
ignore = [
    "E501", # Line too long
    "E741", # Ambiguous variable name
]

[tool.ruff.lint.isort]
known-first-party=["proteus"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
